@@ -27,4 +27,5 @@ do.
 | `/subscribe`               | Subscribe |
 | `/unsubscribe`             | Unsubscribe |
 | <code>/due &lt;in 2 days &#124; this Friday &#124; December 31st&gt;</code> | Set due date |
-| `/remove_due_date`          | Remove due date |
+| `/remove_due_date`         | Remove due date |
+| `/wip`                     | Toggle the Work In Progress status |
